Fix Image Flicker

--- a/src/imagescanner.css
+++ b/src/imagescanner.css
@@ -1,16 +1,22 @@
-#monitor {
+.monitor {
   margin: auto;
   position: relative;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+
   height: 75%;
 }
 
 #container {
+  width: 1150px;
   height: 75%;
   position: relative;
 }
 
-#monitor .ViewportOverlay {
+.cornerstone-canvas {
+  width: 1150px !important;
+  height: 914px !important;
+}
+
+.monitor .ViewportOverlay {
   display: none;
 }
 
@@ -18,18 +24,16 @@
   display: none;
 }
 
-#monitor .screen {
-  margin: auto;
-  margin-top: 10px;
+.monitor .screen {
   width: 100%;
   height: 100%;
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-#monitor .scan {
-  width: 100%;
+.monitor .scan {
   height: 30%;
+  width: 100%;
   position: absolute;
   z-index: 9999;
   -moz-animation: scan 5s infinite;
@@ -40,11 +44,10 @@
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-
 .button {
-  top:0;
-  right:0;
-  position:absolute !important;
+  top: 0;
+  right: 0;
+  position: absolute !important;
   z-index: 999;
 }
 
